# ChangeLog for net-misc/asterisk
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/ChangeLog,v 1.293 2011/02/26 17:24:36 tomka Exp $

  26 Feb 2011; Thomas Kahle <tomka@gentoo.org> asterisk-1.6.2.16.2-r1.ebuild:
  x86 stable per bug 352059

*asterisk-1.6.2.16.2-r1 (24 Feb 2011)

  24 Feb 2011; Tony Vroon <chainsaw@gentoo.org> -asterisk-1.6.2.16.2.ebuild,
  +asterisk-1.6.2.16.2-r1.ebuild:
  Drop problematic misdn dependencies from the 1.6.2 branch to aid in security
  stabilisation. Both the 1.2 and the 1.4 branch are slated for removal and
  will be masked soon.

*asterisk-1.6.2.16.2 (22 Feb 2011)

  22 Feb 2011; Tony Vroon <chainsaw@gentoo.org> -asterisk-1.6.2.16.1.ebuild,
  +asterisk-1.6.2.16.2.ebuild:
  Trim down 1.6.2 branch by culling vulnerable ebuild for AST-2011-002.

*asterisk-1.8.2.4 (22 Feb 2011)

  22 Feb 2011; Tony Vroon <chainsaw@gentoo.org> -asterisk-1.8.2.2.ebuild,
  -asterisk-1.8.2.3.ebuild, +asterisk-1.8.2.4.ebuild:
  Trim down 1.8 branch by culling vulnerable ebuilds for AST-2011-002. Adding
  1.8.2.4 which fixes overflows in both stack & heap based arrays that can be
  exploited through specially crafted UDPTL packets, particularly for T.38
  pass-through & termination.

*asterisk-1.8.2.3 (03 Feb 2011)

  03 Feb 2011; Tony Vroon <chainsaw@gentoo.org> +asterisk-1.8.2.3.ebuild:
  An ABI breakage occured in fax session reservation, which is fixed in this
  release. This is not a security update but rather a bugfix.

*asterisk-1.8.2.2 (22 Jan 2011)

  22 Jan 2011; Tony Vroon <chainsaw@gentoo.org> -asterisk-1.8.2.1.ebuild,
  +asterisk-1.8.2.2.ebuild:
  Upstream reports that a merging accident kept the fix out of the 1.8.2.1
  tarball. 1.8.2.2 does include the security fix. Removed insecure ebuild.

*asterisk-1.4.39.1-r1 (19 Jan 2011)

  19 Jan 2011; Tony Vroon <chainsaw@gentoo.org> -asterisk-1.4.39.1.ebuild,
  +asterisk-1.4.39.1-r1.ebuild: