@@ -43,14 +43,14 @@ DIST gentoo-asterisk-patchset-0.2.tar.bz2 7398 RMD160 65b282fa621b3e65d293cd7e1d
 EBUILD asterisk-1.2.37.ebuild 10717 RMD160 6ec81f6a616cc2cefa862c1a53bc339bc2dcb5de SHA1 0d6260ee62d165581e5223524424f41f48aba084 SHA256 32f27ef174d02947c09b2266bf1f763fa594144f24f7c3bec4523818b168e32f
 EBUILD asterisk-1.2.40.ebuild 10725 RMD160 a41d802dbc202665f190f29241b0f40645480916 SHA1 489416463292be0c64a2d1e2f2182b38579bbfe3 SHA256 4c3467dcb7c4011e42b468d699ea3dcc0041a2fc6968b8124276c8df705c88c6
 EBUILD asterisk-1.4.39.1-r1.ebuild 7367 RMD160 0304f9478d77dada3b7c4dc4f7ed9c5845ff871a SHA1 03cc1bd64f14156ee03b29609dbe643c9b2fb6cd SHA256 774fd4873d8c3122a96a0ddc7f6a0caed2dff81b9acd60cdb5b805bfd9755d7f
-EBUILD asterisk-1.6.2.16.2-r1.ebuild 6311 RMD160 8d681b2d23e88af21ee29d82320c271b47051398 SHA1 e9cf02391cc10ceef20c1ef55a645eb98bae24d3 SHA256 21e98ca05d5b633c202d69e051230e89ac3f529b87a99fbbbd684ae42304180a
+EBUILD asterisk-1.6.2.16.2-r2.ebuild 5799 RMD160 28226427794c3e20a3740cde1aac6c5987d61782 SHA1 4dd486572329fc3b6fd83fbf2d471a965267e941 SHA256 0a0e6c15ef25466f83472b73b517a6d90051b6cfd3df416ffae92b45ffb160f8
 EBUILD asterisk-1.8.2.4.ebuild 14402 RMD160 6cc9ddd9072d71b880b65bad2038e4b0662043b6 SHA1 321dc1e6fa7b549b576ada245e561e1df66703c1 SHA256 2f3e5efd1db384937f10ffbbe0a5bf6dd1ce91f7700e7ba4a97074f2150f4533
-MISC ChangeLog 72708 RMD160 52915015112785f5703513e03236004b5a8ecd3a SHA1 0ee12fb812f62f6f864540bbd52be9bddabd9067 SHA256 c1c3d7bb4605ba9607c551c0872a9a342156ded3f2ee92125922775488a604d7
-MISC metadata.xml 1681 RMD160 fa822016d351dcf52f4b52226adcfa03a4b4e726 SHA1 3436530fb26d46b1d4ff9adba8d684b1e054de20 SHA256 d4199859f1f0eea8a81a895d98270344a0967a76592004b6fdf5ff77a053e824
+MISC ChangeLog 73030 RMD160 46bce2524bc886a23ea1ccac61c67c1d65c36ebd SHA1 2d66aa1c923e8ebfed66edbe67026db80801f5ef SHA256 cf457d3b7f37682de988eee5f3f84ac3f3f4db27be4629b925ecad95c8d40dcb
+MISC metadata.xml 1599 RMD160 e3a57db5f07271fd2504710dd351eba739f7cfa0 SHA1 5914f255dfbb35ffdd989dfd902a511c157c4206 SHA256 66c3fe6c6895e83f1ae0eb674483b1119137af3aab70047b671f40fde3ba0399
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1pNmcACgkQnZsgo/h8kNYxiQCcDW3ru2bfr9ptWHQ1foR3UM9A
-ETUAn0ykGnJ2lxzIz7PrUUZZJerEHDJw
-=19OP
+iEYEARECAAYFAk1pTgYACgkQp5vW4rUFj5qpFwCfVp4qIWhN27yMdBrp07/BFqvF
+jJEAn1F78mp/z+i+9m8XP8x9abYQGwTo
+=DBS6
 -----END PGP SIGNATURE-----
